fix(css): history events overlap (#13900)
In the editor. Made it scrollable if it overflows.

Close: #13886

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -655,6 +655,10 @@ form + .login-label {
   z-index: 10;
 }
 
+#history {
+  overflow-x: auto;
+}
+
 @media only screen and (max-width: 600px) {
   .btn-float {
     box-shadow: none;
